force-app/main/default/objects/animalos__Animal_Indemnity_Waiver__c/animalos__Animal_Indemnity_Waiver__c.object-meta.xml
<CustomObject>
    <label>Animal Indemnity Waiver</label>
    <nameField>
        <displayFormat>AIW{00000}</displayFormat>
        <label>Animal Indemnity Waiver ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Indemnity Waivers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>