force-app/main/default/objects/animalos__Animal_Indemnity_Waiver__c/fields/animalos__Animal_Indemnity_Waiver_Content__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal_Indemnity_Waiver_Content__c</fullName>
    <label>Animal Indemnity Waiver Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>