force-app/main/default/objects/animalos__Animal_Indemnity_Waiver__c/fields/animalos__Indemnity_Waiver__c.field-meta.xml
<CustomField>
    <fullName>animalos__Indemnity_Waiver__c</fullName>
    <label>Indemnity Waiver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>animalos__Indemnity_Waiver__c.animalos__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>animalos__Indemnity_Waiver__c</referenceTo>
    <relationshipLabel>Animal Indemnity Waivers</relationshipLabel>
    <relationshipName>Animal_Indemnity_Waivers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>