force-app/main/default/objects/animalos__Animal_Indemnity_Waiver__c/fields/aos_Indemnity_Waiver_Title__c.field-meta.xml
<CustomField>
    <fullName>aos_Indemnity_Waiver_Title__c</fullName>
    <formula>animalos__Indemnity_Waiver__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indemnity Waiver Title</label>
    <type>Text</type>
</CustomField>